test/src/e2e_vm_tests/test_programs/should_pass/language/main_args/main_args_empty/src/main.sw
script;

fn main(v: u64) -> u64 {
    1337
}
