test/src/e2e_vm_tests/test_programs/should_fail/main_should_not_have_args/src/main.sw
script;

// this shouldn't compile
fn main(x:u64) -> u64 {
    x
} 